adjustments to mobile view

--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "alejandro",
     "rivera",
     "web",
-    "developer"
+    "developer",
+    "software",
+    "freelance",
+    "UX",
+    "UI",
+    "AWS"    
   ],
   "author": "Alejandro Rivera",
   "license": "ISC",
